--- a/src/iac/docker-compose/use_spark_swarm.yml
+++ b/src/iac/docker-compose/use_spark_swarm.yml
@@ -4,15 +4,21 @@ services:
   spark_service:
     image: howarddeiner/zipster-aws-on-demand-spark
     deploy:
-      replicas: 3 # number of containers in total on mesh
+      replicas: 2 # number of containers in total on mesh
       placement:
         max_replicas_per_node: 1
-#      update_config:
-#        parallelism: 1 # one container per node
+##REMOVE##        constraints:
+##REMOVE##          - "node.labels.function==spark-worker"
+      #      update_config:
+      #        parallelism: 1 # one container per node
       restart_policy:
         condition: on-failure
     ports:
-      - "8080:8080"
+#      - "8080:8080"
+      - target: 8080
+        published: 8080
+        protocol: tcp
+        mode: ingress
     environment:
       VAULT_TOKEN: $VAULT_TOKEN
       VAULT_ADDRESS: $VAULT_ADDRESS
@@ -27,3 +33,5 @@ services:
 
 networks:
   overlay:
+    driver: overlay
+    attachable: true
