Add AWS Lambda support.

--- a/src/iac/docker/spark/Dockerfile_Zipster_Spark
+++ b/src/iac/docker/spark/Dockerfile_Zipster_Spark
@@ -4,8 +4,8 @@ FROM openjdk:8u222-jre-slim-buster
 RUN apt-get update -yqq && apt-get install default-mysql-client -yqq
 
 # Deploy the executable
-COPY zipster-1.0-SNAPSHOT-jar-with-dependencies.jar /
+COPY zipster-1.0-SNAPSHOT.jar /
 EXPOSE 8080
 
 # Get the service running
-CMD java -jar zipster-1.0-SNAPSHOT-jar-with-dependencies.jar
+CMD java -jar zipster-1.0-SNAPSHOT.jar
